# ScoutPilot

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  development.md  hh_demo.md  interview_demo.md  release_checklist.md  setup.md  technical_defense.md  testing.md  video_script.md
docs/reviews/: acceptance_review.md  staff_engineer_review.md
src/scout_pilot/: __init__.py  __main__.py  config.py  models.py  semantic_ids.py
src/scout_pilot/browser/: __init__.py  engine.py  playwright_engine.py  types.py
src/scout_pilot/cli/: __init__.py  dashboard.py  doctor.py  main.py  profiles.py  provider_smoke.py  task_session.py
src/scout_pilot/context/: __init__.py  budget.py
src/scout_pilot/demo/: __init__.py  food_order.py  interview.py  live_local.py  mail_spam.py  vacancy_search.py
src/scout_pilot/intelligence/: __init__.py  evaluator.py  types.py
src/scout_pilot/llm/: __init__.py  anthropic_provider.py  codex_cli_provider.py  config.py  errors.py  factory.py  mock_provider.py  openai_provider.py  provider.py  reasoning.py  tool_adapters.py  types.py
src/scout_pilot/memory/: __init__.py  hierarchical.py  privacy.py  serialization.py  store.py  summarizer.py  types.py
tests/: test_autonomous_runtime.py  test_browser_engine.py  test_cli.py  test_cli_task_session.py  test_config.py  test_context_budget.py  test_demo_vacancy_search.py  test_doctor.py  test_execution_intelligence.py  test_food_order_demo.py  test_hierarchical_memory.py  test_llm_providers.py  test_mail_spam_demo.py  test_models.py  test_observation_engine.py  test_package_boundaries.py  test_planning_engine.py  test_profile_cli.py  test_provider_smoke.py  test_replay_summary.py  test_runtime_report.py  test_security_policy.py  test_semantic_navigation.py  test_tool_runtime.py
(+28 files in other folders)
