[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-pilot"
version = "0.1.0"
description = "Autonomous browser agent foundation for an interview project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Scout Pilot Maintainers" }
]
dependencies = [
  "playwright>=1.45"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
scout-pilot = "scout_pilot.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
