[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-pilot"
version = "0.1.0"
description = "Autonomous browser agent foundation for an interview project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Scout Pilot Maintainers" }
]
dependencies = [
  "playwright>=1.45"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8"
]
providers = [
  "anthropic>=0.34",
  "openai>=1.0"
]
all = [
  "anthropic>=0.34",
  "openai>=1.0",
  "pytest>=8",
  "ruff>=0.8"
]

[project.scripts]
scout-pilot = "scout_pilot.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
